--- a/_posts/2025-04-02-递归中使用全局变量的后果.md
+++ b/_posts/2025-04-02-递归中使用全局变量的后果.md
@@ -1,7 +1,7 @@
 ---
 title: 递归中使用全局变量的后果
 date: 2025-04-02 21:15:47 +0800
-categories: [算法, C++]
+categories: [算法]
 tags: [算法, C++, Debug]
 description: 在递归中使用了全局变量这一蠢事带来的思考
 ---
