分治题解（完结）

--- a/_posts/2025-04-14-分治参考题解（一）：之间有多少个数.md
+++ b/_posts/2025-04-14-分治参考题解（一）：之间有多少个数.md
@@ -33,11 +33,11 @@ comment: true
 二分查找顾名思义，用二分法在有序数组中查找某个值，每次能把问题规模缩小到原来的一半。最通常的写法是这样的：
 ```txt
 while l<=r then:
-	mid ← (l+r)/2
+	mid = (l+r)/2
 	if a[mid] < target then:
-		l ← mid+1
-	else r ← mid
-if a[r] = target then:
+		l = mid+1
+	else r = mid
+if a[r] == target then:
 	return r
 else then:
 	return -1
