--- a/_posts/2025-04-14-之间有多少个数.md
+++ b/_posts/2025-04-14-之间有多少个数.md
@@ -1,5 +1,5 @@
 ---
-title: 分治参考题解（一）：之间有多少个数
+title: 之间有多少个数
 author: 凉香栾
 date: 2025-04-14 11:03:28 +0800
 categories:
@@ -13,6 +13,11 @@ pin: false
 math: true
 mermaid: true
 comment: true
+media_subpath: 
+image:
+  path: 
+  lqip: 
+  alt:
 ---
 
 ## 题目描述
@@ -59,13 +64,13 @@ else then:
 
 以此类推，总结题目中没出现的其他情况，所有的情况可以得到下表。
 
-| 目标类型            | `while` 条件 | `mid` 计算公式          | `mid` 偏向 | 比较条件 (`arr[mid]`) | 指针更新逻辑                           | 返回值说明                    |
-| ------------------- | ------------ | ----------------------- | ---------- | --------------------- | -------------------------------------- | ----------------------------- |
-| 查找具体值 `target` | `l <= r`     | `mid = (l + r) / 2`     | 居中       | `== target`           | `<`：`l = mid + 1`；`>`：`r = mid - 1` | 找到返回 `mid`，否则返回 `-1` |
-| 查找第一个 `≥ x`    | `l < r`      | `mid = (l + r) / 2`     | 偏左       | `< x`                 | `l = mid + 1`；否则 `r = mid`          | 循环结束后返回 `l`            |
-| 查找最后一个 `≤ y`  | `l < r`      | `mid = (l + r + 1) / 2` | 偏右       | `≤ y`                 | `l = mid`；否则 `r = mid - 1`          | 循环结束后返回 `l`            |
-| 查找最后一个 `≤ x`  | `l < r`      | `mid = (l + r + 1) / 2` | 偏右       | `≤ x`                 | `l = mid`；否则 `r = mid - 1`          | 循环结束后返回 `l`            |
-| 查找第一个 `> y`    | `l < r`      | `mid = (l + r) / 2`     | 偏左       | `> y`                 | `r = mid`；否则 `l = mid + 1`          | 循环结束后返回 `l`            |
+|目标类型|`while` 条件|`mid` 计算公式|`mid` 偏向|比较条件 (`arr[mid]`)|指针更新逻辑|返回值说明|
+|---|---|---|---|---|---|---|
+|查找具体值 `target`|`l <= r`|`mid = (l + r) / 2`|居中|`== target`|`<`：`l = mid + 1`；`>`：`r = mid - 1`|找到返回 `mid`，否则返回 `-1`|
+|查找第一个 `≥ x`|`l < r`|`mid = (l + r) / 2`|偏左|`< x`|`l = mid + 1`；否则 `r = mid`|循环结束后返回 `l`|
+|查找最后一个 `≤ y`|`l < r`|`mid = (l + r + 1) / 2`|偏右|`≤ y`|`l = mid`；否则 `r = mid - 1`|循环结束后返回 `l`|
+|查找最后一个 `≤ x`|`l < r`|`mid = (l + r + 1) / 2`|偏右|`≤ x`|`l = mid`；否则 `r = mid - 1`|循环结束后返回 `l`|
+|查找第一个 `> y`|`l < r`|`mid = (l + r) / 2`|偏左|`> y`|`r = mid`；否则 `l = mid + 1`|循环结束后返回 `l`|
 
 > 不同的查找目标需要不同的循环条件和 `mid` 偏向策略，避免死循环和错误边界返回值。一般来说：
 > - 查找左边界用偏左 `mid` 和 `l = mid + 1`；
