--- a/_posts/2025-04-14-低买高卖.md
+++ b/_posts/2025-04-14-低买高卖.md
@@ -1,5 +1,5 @@
 ---
-title: 分治参考题解（二）：低买高卖
+title: 低买高卖
 author: 凉香栾
 date: 2025-04-14 17:28:52 +0800
 categories:
@@ -13,6 +13,11 @@ pin: false
 math: true
 mermaid: true
 comment: true
+media_subpath: 
+image:
+  path: 
+  lqip: 
+  alt:
 ---
 
 
