--- a/_posts/2025-04-14-双数据库的中位数.md
+++ b/_posts/2025-04-14-双数据库的中位数.md
@@ -1,5 +1,5 @@
 ---
-title: 分治参考题解（三）：双数据库的中位数
+title: 双数据库的中位数
 author: 凉香栾
 date: 2025-04-14 21:07:06 +0800
 categories:
@@ -13,6 +13,11 @@ pin: false
 math: true
 mermaid: true
 comment: true
+media_subpath: 
+image:
+  path: 
+  lqip: 
+  alt:
 ---
 ## 题目描述
 
