--- a/_posts/2025-04-14-鬼脚图与模拟的冒泡排序.md
+++ b/_posts/2025-04-14-鬼脚图与模拟的冒泡排序.md
@@ -1,5 +1,5 @@
 ---
-title: 分治参考题解（五）：鬼脚图与模拟的冒泡排序
+title: 鬼脚图与模拟的冒泡排序
 author: 凉香栾
 date: 2025-04-14 23:18:32 +0800
 categories:
@@ -13,6 +13,11 @@ pin: false
 math: true
 mermaid: true
 comment: true
+media_subpath: 
+image:
+  path: 
+  lqip: 
+  alt:
 ---
 ## 题目描述
 
