--- a/_posts/2025-04-14-选择男神.md
+++ b/_posts/2025-04-14-选择男神.md
@@ -1,5 +1,5 @@
 ---
-title: 分治参考题解（四）：选择男神
+title: 选择男神
 author: 凉香栾
 date: 2025-04-14 22:37:38 +0800
 categories:
@@ -13,6 +13,11 @@ pin: false
 math: true
 mermaid: true
 comment: true
+media_subpath: 
+image:
+  path: 
+  lqip: 
+  alt:
 ---
 ## 题目描述
 
