--- a/_posts/2025-04-24-天网恢恢.md
+++ b/_posts/2025-04-24-天网恢恢.md
@@ -65,7 +65,7 @@ $$
 
 应用贪心思想，将所有区间按右端点从小到大排序，初始化 $\text{last}=-\infty$。
 
-如果当前区间的 $\text{left}_{i}$ 小于 $\text{last}$ ，说明需要一个新的“鱼骨”系统放置在 $\text{right}_{i}$ ，并更新  $\text{last}= \text{right}_{i}$ 。
+如果当前区间的 $\text{left}_{i} \lt \text{last}_{}$ ，说明需要一个新的“鱼骨”系统放置在 $\text{right}_{i}$ ，并更新 $\text{last}_{} = \text{right}_{i}$。
 
 否则，当前区间可以被之前的“鱼骨”系统覆盖。
 
