--- a/_posts/2025-04-23-机智的教练.md
+++ b/_posts/2025-04-23-机智的教练.md
@@ -64,16 +64,32 @@ comment: true
 此时交换$\pi_i$和$\pi_{i+1}$，得到新顺序$\pi'$，并比较 $T$ 的变化：
 
 在 $\pi$中：
-- $T_{\pi_i} = S_{\pi_i} + other_{\pi_i}$
-- $T_{\pi_{i+1}} = S_{\pi_i} + swim_{\pi_{i+1}} + other_{\pi_{i+1}}$
+$$
+T_{\pi_i} = S_{\pi_i} + other_{\pi_i}
+$$
+
+$$
+T_{\pi_{i+1}} = S_{\pi_i} + swim_{\pi_{i+1}} + other_{\pi_{i+1}}
+$$
 
 在$\pi'$中：
-- \\( T^{'}_{\pi_{i+1}} = S_{\pi_i} + swim_{\pi_{i+1}} + other_{\pi_{i+1}} \\)
-- \\( T^{'}_{\pi_i} = S_{\pi_i} + swim_{\pi_{i+1}} + swim_{\pi_i} + other_{\pi_i} \\)
+
+$$
+T^{'}_{\pi_{i+1}} = S_{\pi_i} + swim_{\pi_{i+1}} + other_{\pi_{i+1}}
+$$
+
+$$
+T^{'}_{\pi_i} = S_{\pi_i} + swim_{\pi_{i+1}} + swim_{\pi_i} + other_{\pi_i}
+$$
 
 可见交换后：
-- \\( T^{'}_{\pi_{i+1}} = T_{\pi_{i+1}} \\)
-- \\( T^{'}_{\pi_i} = T_{\pi_{i+1}} + swim_{\pi_i} + (other_{\pi_i}- other_{\pi_{i+1}}) < T_{\pi_{i+1}} \\)
+$$
+T^{'}_{\pi_{i+1}} = T_{\pi_{i+1}}
+$$
+
+$$
+T^{'}_{\pi_i} = T_{\pi_{i+1}} + swim_{\pi_i} + (other_{\pi_i}- other_{\pi_{i+1}}) < T_{\pi_{i+1}}
+$$
 
 交换后 $\max(T') \le \max(T)$，即总时间不会变差。
 
