--- a/_posts/2025-04-24-剑荡群蘑.md
+++ b/_posts/2025-04-24-剑荡群蘑.md
@@ -47,27 +47,67 @@ comment: true
 > $Bat$ 最后获得的蘑菇总数（整数）
 
 
+## 解题思路
 
-## 解题思路（伪）
+每次选择当前产量最高的妖洞采集，这保证了在当前时刻获得最大收益。由于蘑菇产量递减，优先采集高产量妖洞可以避免后续产量下降带来的损失。
 
-其实这道题并没有AC，所以也没有代码。
+我们用**枚举终点 `end` 洞**的方式求解：
 
-百思不得其解的是，`h`到底是什么？题干里根本没有啊？
+1. 对于每个可达终点 `end`（从洞 $1$ 开始，走到洞 `end`）：
+    - 累加所有的 `ti` 得到“到达该洞所用的时间”
+    - 总时间 `h` 减去前往该洞的时间 = 剩余采蘑菇时间
+2. 接下来，在剩余时间内，模拟“在 $1 \to end$ 洞中每 $5$ 分钟选一个洞去采蘑菇”：
+    - 每个时间段选择“当前可产最多蘑菇”的洞（贪心）
+    - 蘑菇数随着采集次数不断减少（按 `di` 递减），但不会降为负
+3. 枚举所有终点后，取最大的蘑菇总数即为答案。
 
-而且题目给的测试例子：
 
-```txt
-输入数据
-2
-1
-10 1
-2 5 
-2
+### 时间复杂度
 
-期待的输出
-31
+外层枚举终点是`O(n)`的，每次模拟最多需要`O(h*n)`，总共`O(h*n^2)`。
+
+## 附AC代码
+
+```cpp
+#include <bits/stdc++.h>  
+using namespace std;  
+int n, h,ans;  
+int f[30], d[30], t[30],cur_f[30], cur_d[30];  
+
+int main() {  
+    cin >> n >> h;  
+    h*=12; //处理时间换算
+  
+    for (int i = 0; i < n; ++i) cin >> f[i]; 
+    for (int i = 0; i < n; ++i) cin >> d[i]; 
+    for (int i = 0; i < n - 1; ++i) cin >> t[i]; 
+
+    for (int end = 0; end < n; ++end) {  
+        int used = 0;  
+        for (int i = 0; i < end; ++i) used += t[i];  
+        int remain = h - used;  
+  
+        if (remain <= 0) continue;  
+  
+        for (int i = 0; i <= end; ++i) {  
+            cur_f[i] = f[i];  
+            cur_d[i] = d[i];  
+        }  
+  
+        int total = 0;  
+        for (int i = 0; i < remain; ++i) {  
+            int mx = 0;  
+            for (int j = 1; j <= end; ++j) {  
+                if (cur_f[j] > cur_f[mx]) mx = j;  
+            }  
+            total += cur_f[mx];  
+            cur_f[mx] = max(0, cur_f[mx] - cur_d[mx]);  
+        }  
+  
+        if (total > ans) ans = total;  
+    }  
+  
+	cout << ans << endl;
+    return 0;  
+}
 ```
-
-如果`h`是单位时长的话根本讲不通，一个单位时长只够采$10$个蘑菇。
-
-总之不太懂，回头等答案出来问问老师再说。
