--- a/_posts/2025-04-26-学生会超级委员会.md
+++ b/_posts/2025-04-26-学生会超级委员会.md
@@ -40,6 +40,16 @@ comment: true
 
 ### 正确性证明
 
+设：
+- 贪心解选择的区间序列为 $i_1, i_2, \ldots, i_k$
+- 任意最优解选择的区间序列为 $j_1, j_2, \ldots, j_m$（按结束时间排序）
+
+**断言**：对于任意 $t \leq k$，有 $j_t$ 的结束时间 $\leq i_t$ 的结束时间
+
+归纳奠基 $t = 1$ 时是平凡的，假设对前 $t-1$ 步成立：$j_1.\text{end} \leq i_1.\text{end}$, $\ldots$, $j_{t-1}.\text{end} \leq i_{t-1}.\text{end}$
+
+设当前未覆盖区间中最小的结束点为 $j_t$ ，根据贪心策略选择 $i_t$：覆盖 $j_t$ 且结束最晚 $\Rightarrow j_t.\text{end} \leq i_t.\text{end}$
+
 
 ### 时间复杂度
 
