dark模式颜色显示问题

--- a/_posts/2025-07-21-算法概述.md
+++ b/_posts/2025-07-21-算法概述.md
@@ -228,12 +228,11 @@ $\le (c_1 + c_2) g(n)$
 
 首先明确三个问题的定义：
 
-- **点独立集 (INDEPENDENT-SET)**：给定一个简单图 $G=(V, E)$ 和一个整数 $k$，是否存在一个顶点子集 $S \subseteq V$，使得 $|S| [cite_{start}]\ge k$，且图中任意一条边的两个端点至多只有一个在 $S$ 中？换句话说， $S$ 中的任意两个顶点都不相邻。
+- **点独立集 (INDEPEND-SET)**：给定一个简单图 $G=(V, E)$ 和一个整数 $k$，是否存在一个顶点子集 $S \subseteq V$，使得 $\|S\| \ge k$，且图中任意一条边的两个端点至多只有一个在 $S$ 中？换句话说，$S$ 中的任意两个顶点都不相邻。
 
-- **顶点覆盖 (VERTEX-COVER)**：给定一个简单图 $G=(V, E)$ 和一个整数 $k$，是否存在一个顶点子集 $S \subseteq V$，使得 $|S| [cite_{start}]\le k$，且图中任意一条边都至少有一个端点在 $S$ 中？
+- **顶点覆盖 (VERTEX-COVER)**：给定一个简单图 $G=(V, E)$ 和一个整数 $k$，是否存在一个顶点子集 $S \subseteq V$，使得 $\|S\| \le k$，且图中任意一条边都至少有一个端点在 $S$ 中？
 
 - **团 (CLIQUE)**：给定一个简单图 $G$ 和一个值 $k$，判断图 $G$ 中是否存在一个 $k$-团作为子图？一个 $k$-团是一组 $k$ 个顶点，它们之间两两相连，构成一个完全图 $K_k$。
-
 
 **证明一**：INDEPENDENT-SET $\equiv_P$ VERTEX-COVER
 
@@ -257,8 +256,8 @@ $\le (c_1 + c_2) g(n)$
 * 根据定义，S 是一个点独立集。
 
 基于上述证明，我们可以建立两个问题间的归约。
-* `INDEPENDENT-SET` $\le_P$ `VERTEX-COVER`：要判断图 $G$ 是否有大小至少为 $k$ 的点独立集，我们只需判断它是否有大小至多为 $|V|-k$ 的顶点覆盖即可。
-* `VERTEX-COVER` $\le_P$ `INDEPENDENT-SET`：要判断图 $G$ 是否有大小至多为 $k$ 的顶点覆盖，我们只需判断它是否有大小至少为 $|V|-k$ 的点独立集即可。
+* `INDEPENDENT-SET` $\le_P$ `VERTEX-COVER`：要判断图 $G$ 是否有大小至少为 $k$ 的点独立集，我们只需判断它是否有大小至多为 $\|V\|-k$ 的顶点覆盖即可。
+* `VERTEX-COVER` $\le_P$ `INDEPENDENT-SET`：要判断图 $G$ 是否有大小至多为 $k$ 的顶点覆盖，我们只需判断它是否有大小至少为 $\|V\|-k$ 的点独立集即可。
 这两个转换都只涉及简单的减法和问题规约，显然是多项式时间的操作。因此，`INDEPENDENT-SET` $\equiv_P$ `VERTEX-COVER` 。
 
 **证明二**：INDEPENDENT-SET $\equiv_P$ CLIQUE
