--- a/_posts/2025-07-23-分治策略.md
+++ b/_posts/2025-07-23-分治策略.md
@@ -491,9 +491,9 @@ $$
 该算法的思路与快速排序非常相似，但更高效，因为它只处理其中一个子问题。
 
 * **算法流程**：
-    1.  **分解**：从集合 S 中**随机**选择一个元素 x 作为枢轴。 
-    2.  **划分**：以 x 为枢轴将 S 划分为两个子集：$S_< = \{y \in S | y < x\}$ 和 $S_> = \{y \in S | y > x\}$。这个过程需要 $\Theta(n)$ 时间。 
-    3.  **解决**：计算枢轴 x 的秩 $R(x, S) = |S_<| + 1$。
+    1.  **分解**：从集合 S 中**随机**选择一个元素 x 作为枢轴。 
+    2.  **划分**：以 x 为枢轴将 S 划分为两个子集：$S_< = \\{ y \in S \| y < x \\}$ 和 $S_> = \\{ y \in S \| y > x \\}$。这个过程需要 $\Theta(n)$ 时间。 
+    3.  **解决**：计算枢轴 x 的秩 $R(x, S) = \|S_<\| + 1$。
         * 如果 $R(x, S) = k$，则 x 就是要找的元素。 
         * 如果 $R(x, S) > k$，则第 k 小的元素在 $S_<$ 中，递归地在 $S_<$ 中寻找第 k 小的元素。 
         * 如果 $R(x, S) < k$，则第 k 小的元素在 $S_>$ 中，递归地在 $S_>$ 中寻找第 $k - R(x, S)$ 小的元素。 
