--- a/_posts/2025-04-27-勇者打怪兽.md
+++ b/_posts/2025-04-27-勇者打怪兽.md
@@ -3,7 +3,7 @@ title: 勇者打怪兽
 author: 凉香栾
 date: 2025-04-27 13:33:09 +0800
 categories:
-  - 算法
+  - 算法题解
 tags:
   - 贪婪
 description: 贪婪系列参考题解七
@@ -12,7 +12,7 @@ pin: false
 math: true
 mermaid: true
 comment: true
-media_subpath: 
+media_subpath:
 ---
 
 
