--- a/_posts/2025-05-24-字符串分割处理.md
+++ b/_posts/2025-05-24-字符串分割处理.md
@@ -3,7 +3,7 @@ title: 字符串分割处理
 author: 凉香栾
 date: 2025-05-24 19:05:34 +0800
 categories:
-  - 算法
+  - 算法题解
 tags:
   - 动态规划
 description: 动态规划系列参考题解六
