--- a/_posts/2025-05-22-小云的户外徒步锻炼计划.md
+++ b/_posts/2025-05-22-小云的户外徒步锻炼计划.md
@@ -3,7 +3,7 @@ title: 小云的户外徒步锻炼计划
 author: 凉香栾
 date: 2025-05-26 18:35:44 +0800
 categories:
-  - 算法
+  - 算法题解
 tags:
   - 动态规划
 description: 动态规划系列参考题解三
