--- a/_posts/2025-05-22-尽可能公平的拔河游戏.md
+++ b/_posts/2025-05-22-尽可能公平的拔河游戏.md
@@ -3,7 +3,7 @@ title: 尽可能公平的拔河游戏
 author: 凉香栾
 date: 2025-05-22 10:09:23 +0800
 categories:
-  - 算法
+  - 算法题解
 tags:
   - 动态规划
 description: 动态规划系列参考题解二
