--- a/_posts/2025-10-29-线性可分支持向量机.md
+++ b/_posts/2025-10-29-线性可分支持向量机.md
@@ -28,7 +28,7 @@ comment: true
 
 但函数间隔有一个问题：如果将 $w$ 和 $b$ 成比例放大，超平面不变，但函数间隔会变为原来的若干倍。
 
-因此可以通过约束法向量使得这个间隔确定下来，如规范化$||w||=1$，使得间隔是确定的。因此可以定义几何间隔 $\gamma_i = y_i \left( \frac{w}{||w||} \cdot x_i + \frac{b}{||w||} \right) = \frac{\hat{\gamma_i}}{||w||}$，这是点到超平面的真实距离，它不随 $w$ 和 $b$ 的缩放而改变 。
+因此可以通过约束法向量使得这个间隔确定下来，如规范化 $\Vert w \Vert=1$ ，使得间隔是确定的。因此可以定义几何间隔 $\gamma_i = y_i \left( \frac{w}{\Vert w \Vert} \cdot x_i + \frac{b}{\Vert w \Vert} \right) = \frac{\hat{\gamma_i}}{\Vert w \Vert}$ ，这是点到超平面的真实距离，它不随 $w$ 和 $b$ 的缩放而改变。
 
 ### 存在唯一性
 
@@ -40,7 +40,7 @@ comment: true
 
 $$
 \begin{align}
- & \max\limits_{w,b} \frac{\hat{\gamma}}{||w||} \\
+ & \max\limits_{w,b} \frac{\hat{\gamma}}{\Vert w \Vert} \\
  & \text{s.t.} \quad y_i (w \cdot x_{i} + b) \ge \hat{\gamma}, i=1,2,\dots,N
 \end{align}
 $$
@@ -54,11 +54,11 @@ $$
 > 
 > 当目标函数$f(w)$是一个二次函数，并且约束函数$g_{i}(w)$是一个仿射函数（线性函数加平移向量）时，这个问题就成为凸二次规划问题。
 
-这个问题等价于最小化$||w||$，令 $\hat{\gamma} = 1$，问题可以转换成凸二次规划问题。
+这个问题等价于最小化 $\Vert w \Vert$ ，令 $\hat{\gamma} = 1$，问题可以转换成凸二次规划问题。
 
 $$
 \begin{align}
- & \min\limits_{w,b} \frac{1}{2} ||w||^2\\
+ & \min\limits_{w,b} \frac{1}{2} \Vert w \Vert^2\\
  & \text{s.t.} \quad y_i (w \cdot x_{i} + b) -1 \geq 0, i=1,2,\dots,N
 \end{align}
 $$
@@ -74,7 +74,7 @@ $$
 
 对于正例（$y_i = +1$），它们在 $H_1: w \cdot x + b = 1$ 上，对于负例（$y_i = -1$），它们在 $H_2: w \cdot x + b = -1$ 上。在决定分离超平面时，**只有支持向量在起作用**。其他实例点（非支持向量）即使被移除或在间隔边界外移动，解（即超平面）也不会改变。
 
-分离超平面与$H_{1}$和$H_{2}$平行且位于它们中央。它们之间的距离称为间隔，宽度等于$\frac{2}{||w||}$，$H_{1}$和$H_{2}$称为间隔边界。
+分离超平面与$H_{1}$和$H_{2}$平行且位于它们中央。它们之间的距离称为间隔，宽度等于$\frac{2}{\Vert w \Vert}$，$H_{1}$和$H_{2}$称为间隔边界。
 
 ### 求解超平面
 
@@ -83,8 +83,15 @@ $$
 例：
 
 求 $w_{1,2} , b$，使得：
-$$\min_{w,b} \frac{1}{2}(w_1^2 + w_2^2)$$
-$$\begin{aligned} \text{s.t.} \quad & 3w_1 + 3w_2 + b \ge 1 \\ & 4w_1 + 3w_2 + b \ge 1 \\ & -w_1 - w_2 - b \ge 1 \end{aligned}$$
+
+$$
+\begin{align}
+ & \min_{w,b} \frac{1}{2}(w_1^2 + w_2^2) \\
+\text{s.t.} \quad & 3w_1 + 3w_2 + b \ge 1  \\
+& 4w_1 + 3w_2 + b \ge 1  \\
+& -w_1 - w_2 - b \ge 1
+\end{align}
+$$
 
 解：
 
