--- a/_posts/2025-10-29-线性可分支持向量机.md
+++ b/_posts/2025-10-29-线性可分支持向量机.md
@@ -22,7 +22,7 @@ comment: true
 
 ### 定义
 
-给定通过间隔最大化求得的分类超平面为 $w^* \cdot x + b^* = 0$，以及相应的分类决策函数为$f(x)=sign(w^* \cdot{x} + b^*)$，称为线性可分支持向量机。
+给定通过间隔最大化求得的分类超平面为 $w^{\ast} \cdot x + b^{\ast} = 0$，以及相应的分类决策函数为$f(x)=sign(w^{\ast} \cdot{x} + b^*)$，称为线性可分支持向量机。
 
 对于给定训练数据集$T$和超平面$(w,b)$，定义超平面关于样本点$(x_{i},y_{i})$的函数间隔为$\hat{\gamma_i} = y_i(w \cdot x_i + b)$ ，可以通过计算样本点与超平面的远见来表示分类的正确性和确信度。
 
@@ -66,7 +66,7 @@ $$
 > [!TIP]
 > 机器学习中的凸函数指的是下凸上凹函数，例如$y=x^2$.
 
-由此可以解得$w^*,b^*$.
+由此可以解得$w^{\ast} ,b^{\ast} $.
 
 ### 支持向量
 
@@ -115,7 +115,7 @@ $$
 定义原始最优化问题为
 $$
 \begin{align}
- &  p^* = \min_{x} f(x)\\
+ &  p^{\ast} = \min_{x} f(x)\\
  & \text{s.t. } c_i(x) \le 0, \quad h_j(x) = 0
 \end{align}
 $$
@@ -124,7 +124,7 @@ $$
 
 $$L(x, \alpha, \beta) = f(x) + \sum \alpha_i c_i(x) + \sum \beta_j h_j(x)$$
 
-这里$x = \left(x^{(1)},x^{(2)},\dots,x^{(n)}\right) \in R^n$，考虑$x$的函数$\theta_{p}(x) = \max\limits_{\alpha,\beta:\alpha_{i}\geq_{0}}L(x,\alpha,\beta)$，下标$p$表示原始问题。因此把 $\min\limits_{x} \max\limits_{\alpha, \beta: \alpha_i \ge 0} L(x, \alpha, \beta)$ 称为广义拉格朗日函数的**极小极大**问题，定义原始问题的（最优）值为 $p^* = \min\limits_{x}\theta_{p}(x)$.
+这里$x = \left(x^{(1)},x^{(2)},\dots,x^{(n)}\right) \in R^n$，考虑$x$的函数$\theta_{p}(x) = \max\limits_{\alpha,\beta:\alpha_{i}\geq_{0}}L(x,\alpha,\beta)$，下标$p$表示原始问题。因此把 $\min\limits_{x} \max\limits_{\alpha, \beta: \alpha_i \ge 0} L(x, \alpha, \beta)$ 称为广义拉格朗日函数的**极小极大**问题，定义原始问题的（最优）值为 $p^{\ast} = \min\limits_{x}\theta_{p}(x)$.
 
 为了得到对偶问题，我们需要定义拉格朗日对偶函数 (Lagrange Dual Function) 。它是广义拉格朗日函数关于原始变量求得的最小值：
 
@@ -141,13 +141,13 @@ $$
 \end{align}
 $$
 
-称为广义拉格朗日函数的**极大极小**问题，其（最优）值为 $d^* = \max_{\alpha, \beta: \alpha_i \ge 0} \theta_D(\alpha, \beta)$.
+称为广义拉格朗日函数的**极大极小**问题，其（最优）值为 $d^{\ast} = \max_{\alpha, \beta: \alpha_i \ge 0} \theta_D(\alpha, \beta)$.
 
 #### 对偶问题的性质
 
-弱对偶性说明，对于任何最优化问题，对偶问题的最优值 $d^*$ 永远是原始问题最优值 $p^*$ 的一个下界。即：$d^* \le p^*$。**这是显然的**。
+弱对偶性说明，对于任何最优化问题，对偶问题的最优值 $d^{\ast}$ 永远是原始问题最优值 $p^{\ast}$ 的一个下界。即：$d^{\ast} \le p^{\ast}$。**这是显然的**。
 
-强对偶性则说明，在满足特定条件时，对偶问题的最优值**等于**原始问题的最优值。即：$d^* = p^*$。
+强对偶性则说明，在满足特定条件时，对偶问题的最优值**等于**原始问题的最优值。即：$d^{\ast} = p^{\ast}$。
 
 针对我们讨论得到这个凸二次规划问题，我们找到了一个特定条件，叫做 Slater 条件。Slater 条件是强对偶关系的一个充分条件。因为凸优化问题中每个约束都是一个凸集， Slater 条件要求这些约束的交集不能是空的，也不能是“病态的”（例如相切状态）。它要求这个交集必须形成一个有 “内部” 的区域。 Slater 条件对强对偶性的充分性可以证明。
 
@@ -155,7 +155,7 @@ $$
 
 #### KKT 条件
 
-当强对偶性 ($d^* = p^*$) 成立时，原始问题和对偶问题的最优解 $x^*, \alpha^*, \beta^*$ 必须满足一系列被称为 **KKT (Karush-Kuhn-Tucker) 条件**的必要条件。
+当强对偶性 ($d^{\ast} = p^{\ast} $) 成立时，原始问题和对偶问题的最优解 $x^{\ast} , \alpha^{\ast} , \beta^{\ast} $ 必须满足一系列被称为 **KKT (Karush-Kuhn-Tucker) 条件**的必要条件。
 
 > [!TIP]
 > 
@@ -167,9 +167,10 @@ $$
 
 KKT 条件有很多种形式，针对支持向量机问题以这种形式呈现：
 
-$$\begin{cases}  & (1) \quad \nabla_x L(x^*, \alpha^*, \beta^*) = 0 \\  & (2) \quad \alpha_i^* c_i(x^*) = 0 \\  & (3) \quad c_i(x^*) \le 0 \\  & (4) \quad \alpha_i^* \ge 0 \\  & (5) \quad h_j(x^*) = 0 \end{cases}$$
+$$\begin{cases}  & (1) \quad \nabla_x L(x^{\ast} , \alpha^{\ast} , \beta^{\ast} ) = 0 \\  & (2) \quad \alpha_i^{\ast} c_i(x^*) = 0 \\  & (3) \quad c_i(x^{\ast} ) \le 0 \\  & (4) \quad \alpha_i^{\ast} \ge 0 \\  & (5) \quad h_j(x^*) = 0 \end{cases}$$
 
-（1） 原始变量 $x$ 对应 $w, b$，分别求偏导得$\nabla_w L = 0 \implies w^* = \sum \alpha_i^* y_i x_i$ 和 $\nabla_b L = 0 \implies \sum \alpha_i^* y_i = 0$ ，以此可以得到只关于$\alpha_{i}$的对偶问题。这个性质称为平稳性。
-（2） 在线性可分支持向量机中，$c_i(x^*) = 1 - y_i(w^* \cdot x_i + b^*) \le 0$，则 $\alpha_i^* (1 - y_i(w^* \cdot x_i + b^*)) = 0$。如果 $\alpha_{i} > 0$（即 $x_i$ 是支持向量），则必有 $1 - y_i(w^* \cdot x_i + b^*) = 0$，即 $y_i(w^* \cdot x_i + b^*) = 1$。这说明该点恰好在间隔边界；如果 $1 - y_i(w^* \cdot x_i + b^*) < 0$（即 $y_i(w^* \cdot x_i + b^*) > 1$），说明该点在间隔边界之外（非支持向量），则必有 $\alpha_i^* = 0$。这个性质称为互补松弛性。
+（1） 原始变量 $x$ 对应 $w, b$，分别求偏导得$\nabla_w L = 0 \implies w^{\ast} = \sum \alpha_i^{\ast} y_i x_i$ 和 $\nabla_b L = 0 \implies \sum \alpha_i^{\ast} y_i = 0$ ，以此可以得到只关于$\alpha_{i}$的对偶问题。这个性质称为平稳性。
+
+（2） 在线性可分支持向量机中，$c_i(x^{\ast} ) = 1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) \le 0$，则 $\alpha_i^{\ast} (1 - y_i(w^{\ast} \cdot x_i + b^{\ast} )) = 0$。如果 $\alpha_{i} > 0$（即 $x_i$ 是支持向量），则必有 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 0$，即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 1$。这说明该点恰好在间隔边界；如果 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) < 0$（即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) > 1$），说明该点在间隔边界之外（非支持向量），则必有 $\alpha_i^{\ast} = 0$。这个性质称为互补松弛性。
 
 剩余三个是可行性约束，来自于问题定义。
