--- a/_posts/2025-10-29-线性可分支持向量机.md
+++ b/_posts/2025-10-29-线性可分支持向量机.md
@@ -16,6 +16,7 @@ comment: true
 ---
 
 
+
 线性可分支持向量机 (Linearly Separable SVM)又称为**硬间隔支持向量机**（Hard Margin SVM）。当训练数据线性可分时，它通过**间隔最大化**来学习一个线性的分类器。
 
 所谓的间隔最大化，就是**几何间隔最大化**，也就是**硬间隔最大化**。
@@ -31,6 +32,7 @@ comment: true
 因此可以通过约束法向量使得这个间隔确定下来，如规范化 $\Vert w \Vert=1$ ，使得间隔是确定的。因此可以定义几何间隔 $\gamma_i = y_i \left( \frac{w}{\Vert w \Vert} \cdot x_i + \frac{b}{\Vert w \Vert} \right) = \frac{\hat{\gamma_i}}{\Vert w \Vert}$ ，这是点到超平面的真实距离，它不随 $w$ 和 $b$ 的缩放而改变。
 
 ### 存在唯一性
+
 
 可以证明，若训练数据集 $T$ 线性可分 ，则可将训练数据集中的样本点完全正确分开的最大间隔分离超平面存在且唯一。
 
@@ -66,7 +68,7 @@ $$
 > [!TIP]
 > 机器学习中的凸函数指的是下凸上凹函数，例如$y=x^2$.
 
-由此可以解得$w^{\ast} ,b^{\ast} $.
+由此可以解得$w^{\ast} ,b^{\ast}$.
 
 ### 支持向量
 
@@ -141,21 +143,23 @@ $$
 \end{align}
 $$
 
-称为广义拉格朗日函数的**极大极小**问题，其（最优）值为 $d^{\ast} = \max_{\alpha, \beta: \alpha_i \ge 0} \theta_D(\alpha, \beta)$.
+称为广义拉格朗日函数的**极大极小**问题，其（最优）值为 $d^{\ast} = \max\limits_{\alpha, \beta: \alpha_i \ge 0} \theta_D(\alpha, \beta)$.
 
 #### 对偶问题的性质
 
 弱对偶性说明，对于任何最优化问题，对偶问题的最优值 $d^{\ast}$ 永远是原始问题最优值 $p^{\ast}$ 的一个下界。即：$d^{\ast} \le p^{\ast}$。**这是显然的**。
 
-强对偶性则说明，在满足特定条件时，对偶问题的最优值**等于**原始问题的最优值。即：$d^{\ast} = p^{\ast}$。
+强对偶性则说明，在满足特定条件时，对偶问题的最优值**等于**原始问题的最优值。即：$d^{\ast} = p^{\ast} = L(x^\ast,\alpha^*,\beta^\ast)$。
 
-针对我们讨论得到这个凸二次规划问题，我们找到了一个特定条件，叫做 Slater 条件。Slater 条件是强对偶关系的一个充分条件。因为凸优化问题中每个约束都是一个凸集， Slater 条件要求这些约束的交集不能是空的，也不能是“病态的”（例如相切状态）。它要求这个交集必须形成一个有 “内部” 的区域。 Slater 条件对强对偶性的充分性可以证明。
+针对我们讨论得到这个凸二次规划问题，我们找到了一个特定条件，叫做 Slater 条件。Slater 条件是强对偶关系的一个充分条件。因为凸优化问题中每个约束都是一个凸集， Slater 条件要求这些约束的交集不能是空的，也不能是“病态的”（例如相切状态）。它要求这个交集必须形成一个有 “内部” 的区域。
 
-而同样可以证明，本问题满足 Slater 条件。
+具体可以表述为，不等式约束$c_{i}(x)$是严格可行的，即存在 $x$ ，对所有 $i$ 有 $c_{i}(x)<0$。 
+
+Slater 条件对强对偶性的充分性可以证明。而同样可以证明，本问题满足 Slater 条件。
 
 #### KKT 条件
 
-当强对偶性 ($d^{\ast} = p^{\ast} $) 成立时，原始问题和对偶问题的最优解 $x^{\ast} , \alpha^{\ast} , \beta^{\ast} $ 必须满足一系列被称为 **KKT (Karush-Kuhn-Tucker) 条件**的必要条件。
+当强对偶性 ($d^{\ast} = p^{\ast}$) 成立时，原始问题和对偶问题的最优解 $x^{\ast} , \alpha^{\ast} , \beta^{\ast}$ 必须满足一系列被称为 **KKT (Karush-Kuhn-Tucker) 条件**的必要条件。
 
 > [!TIP]
 > 
@@ -171,6 +175,85 @@ $$\begin{cases}  & (1) \quad \nabla_x L(x^{\ast} , \alpha^{\ast} , \beta^{\ast}
 
 （1） 原始变量 $x$ 对应 $w, b$，分别求偏导得$\nabla_w L = 0 \implies w^{\ast} = \sum \alpha_i^{\ast} y_i x_i$ 和 $\nabla_b L = 0 \implies \sum \alpha_i^{\ast} y_i = 0$ ，以此可以得到只关于$\alpha_{i}$的对偶问题。这个性质称为平稳性。
 
-（2） 在线性可分支持向量机中，$c_i(x^{\ast} ) = 1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) \le 0$，则 $\alpha_i^{\ast} (1 - y_i(w^{\ast} \cdot x_i + b^{\ast} )) = 0$。如果 $\alpha_{i} > 0$（即 $x_i$ 是支持向量），则必有 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 0$，即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 1$。这说明该点恰好在间隔边界；如果 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) < 0$（即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) > 1$），说明该点在间隔边界之外（非支持向量），则必有 $\alpha_i^{\ast} = 0$。这个性质称为互补松弛性。
+（2） 在线性可分支持向量机中，$c_i(x^{\ast} ) = 1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) \le 0$，则 $\alpha_i^{\ast} (1 - y_i(w^{\ast} \cdot x_i + b^{\ast} )) = 0$。如果 $\alpha_{i}^\ast > 0$（即 $x_i$ 是支持向量），则必有 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 0$，即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) = 1$。这说明该点恰好在间隔边界；如果 $1 - y_i(w^{\ast} \cdot x_i + b^{\ast} ) < 0$（即 $y_i(w^{\ast} \cdot x_i + b^{\ast} ) > 1$），说明该点在间隔边界之外（非支持向量），则必有 $\alpha_i^{\ast} = 0$。这个性质称为互补松弛性。
 
 剩余三个是可行性约束，来自于问题定义。
+
+#### 对偶法求解
+
+接下来需要求解$\min_x L(x, \alpha, \beta)$，对 $w,b$ 求偏导并令其为$0$，得到$\nabla_w L = 0 \implies w = \sum \alpha_i y_i x_i$ 和 $\nabla_b L = 0 \implies \sum \alpha_i y_i = 0$.
+
+在我们本节的具体问题中，拉格朗日函数为：
+
+$$
+\begin{align}
+L(w, b, \alpha) &= \frac{1}{2} \Vert w \Vert^2 - \sum_{i=1}^N \alpha_i (y_i(w \cdot x_i + b) - 1) \\ \\
+& = \frac{1}{2} ||w||^2 - \sum_{i=1}^N \alpha_i y_i (w \cdot x_i) - b \sum_{i=1}^N \alpha_i y_i + \sum_{i=1}^N \alpha_i \\
+& = \frac{1}{2} \sum \sum \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum \sum \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) + \sum \alpha_i  \\
+ & = -\frac{1}{2} \sum_{i=1}^N \sum_{j=1}^N \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) + \sum_{i=1}^N \alpha_i
+\end{align}
+$$
+
+
+消去了$w,b$，并将这个最大化问题 $\max -f(x)$ 转换为等价的最小化问题 $\min f(x)$ 
+
+$$
+\begin{align}
+ & \min_\alpha \quad \frac{1}{2} \sum_{i=1}^N \sum_{j=1}^N \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum_{i=1}^N \alpha_i \\
+ & \text{s.t.} \quad \sum_{i=1}^N \alpha_i y_i = 0 \\
+ & \alpha_i \ge 0, \quad i=1, 2, \dots, N
+\end{align}
+$$
+
+
+利用优化算法迭代多次，可得最优解 $\alpha^* = (\alpha_1^*, \alpha_2^*, \dots, \alpha_N^*)^T$。
+
+
+根据KKT条件，$w^* = \sum_{i=1}^N \alpha_i^* y_i x_i$且可以选择 $\alpha^*$ 的一个正分量 $\alpha_j^* > 0$（这个 $j$ 对应的 $x_j$ 就是一个支持向量），利用互补松弛性，有$y_j(w^* \cdot x_j + b^*) - 1 = 0$，代入：
+
+$$
+y_j \left( \left( \sum_{i=1}^N \alpha_i^* y_i x_i \right) \cdot x_j + b^* \right) - 1 = 0
+$$
+
+利用 $y_j^2 = 1$，两边同乘以 $y_j$，解得 $b^*$：
+
+$$
+b^* = y_j - \sum_{i=1}^N \alpha_i^* y_i (x_i \cdot x_j)
+$$
+
+### 总结
+
+线性可分支持向量机使用拉格朗日对偶法的完整求解过程如下。
+
+**输入**：线性可分训练集 $T = \{(x_1, y_1), (x_2, y_2), \dots, (x_N, y_N)\}$，其中 $x_i \in \mathcal{X} = R^n, y_i \in \mathcal{Y} = \{-1, +1\}, i=1, 2, \dots, N$；
+
+**输出**：分离超平面和分类决策函数。
+
+**(1)** 构造并求解约束最优化问题：
+
+$$\min_\alpha \quad \frac{1}{2} \sum_{i=1}^N \sum_{j=1}^N \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum_{i=1}^N \alpha_i$$
+
+$$\text{s.t.} \quad \sum_{i=1}^N \alpha_i y_i = 0$$
+
+$$\alpha_i \ge 0, \quad i=1, 2, \dots, N$$
+
+求得最优解 $\alpha^* = (\alpha_1^*, \alpha_2^*, \dots, \alpha_N^*)^T$。
+
+**(2)** 计算
+
+$$w^* = \sum_{i=1}^N \alpha_i^* y_i x_i$$
+
+并选择 $\alpha^*$ 的一个正分量 $\alpha_j^* > 0$，计算
+
+$$b^* = y_j - \sum_{i=1}^N \alpha_i^* y_i (x_i \cdot x_j)$$
+
+**(3)** 求得分离超平面
+
+$$w^* \cdot x + b^* = 0$$
+
+分类决策函数：
+
+$$f(x) = sign(w^* \cdot x + b^*)$$
+
+
+
