--- a/_posts/2025-10-29-线性可分支持向量机.md
+++ b/_posts/2025-10-29-线性可分支持向量机.md
@@ -23,7 +23,7 @@ comment: true
 
 ### 定义
 
-给定通过间隔最大化求得的分类超平面为 $w^{\ast} \cdot x + b^{\ast} = 0$，以及相应的分类决策函数为$f(x)=sign(w^{\ast} \cdot{x} + b^*)$，称为线性可分支持向量机。
+给定通过间隔最大化求得的分类超平面为 $w^{\ast} \cdot x + b^{\ast} = 0$，以及相应的分类决策函数为$f(x)=sign(w^{\ast} \cdot{x} + b^\ast)$，称为线性可分支持向量机。
 
 对于给定训练数据集$T$和超平面$(w,b)$，定义超平面关于样本点$(x_{i},y_{i})$的函数间隔为$\hat{\gamma_i} = y_i(w \cdot x_i + b)$ ，可以通过计算样本点与超平面的远见来表示分类的正确性和确信度。
 
@@ -206,19 +206,19 @@ $$
 $$
 
 
-利用优化算法迭代多次，可得最优解 $\alpha^* = (\alpha_1^*, \alpha_2^*, \dots, \alpha_N^*)^T$。
+利用优化算法迭代多次，可得最优解 $\alpha^\ast = (\alpha_1^\ast, \alpha_2^\ast, \dots, \alpha_N^\ast)^T$。
 
 
-根据KKT条件，$w^* = \sum_{i=1}^N \alpha_i^* y_i x_i$且可以选择 $\alpha^*$ 的一个正分量 $\alpha_j^* > 0$（这个 $j$ 对应的 $x_j$ 就是一个支持向量），利用互补松弛性，有$y_j(w^* \cdot x_j + b^*) - 1 = 0$，代入：
-
-$$
-y_j \left( \left( \sum_{i=1}^N \alpha_i^* y_i x_i \right) \cdot x_j + b^* \right) - 1 = 0
-$$
-
-利用 $y_j^2 = 1$，两边同乘以 $y_j$，解得 $b^*$：
+根据KKT条件，$w^\ast = \sum_{i=1}^N \alpha_i^\ast y_i x_i$且可以选择 $\alpha^\ast$ 的一个正分量 $\alpha_j^\ast > 0$（这个 $j$ 对应的 $x_j$ 就是一个支持向量），利用互补松弛性，有$y_j(w^\ast \cdot x_j + b^\ast) - 1 = 0$，代入：
 
 $$
-b^* = y_j - \sum_{i=1}^N \alpha_i^* y_i (x_i \cdot x_j)
+y_j \left( \left( \sum_{i=1}^N \alpha_i^\ast y_i x_i \right) \cdot x_j + b^\ast \right) - 1 = 0
+$$
+
+利用 $y_j^2 = 1$，两边同乘以 $y_j$，解得 $b^\ast$：
+
+$$
+b^\ast = y_j - \sum_{i=1}^N \alpha_i^\ast y_i (x_i \cdot x_j)
 $$
 
 ### 总结
@@ -231,29 +231,32 @@ $$
 
 **(1)** 构造并求解约束最优化问题：
 
-$$\min_\alpha \quad \frac{1}{2} \sum_{i=1}^N \sum_{j=1}^N \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum_{i=1}^N \alpha_i$$
+$$
+\begin{align}
+ & \min_\alpha \quad \frac{1}{2} \sum_{i=1}^N \sum_{j=1}^N \alpha_i \alpha_j y_i y_j (x_i \cdot x_j) - \sum_{i=1}^N \alpha_i \\
+ & \text{s.t.} \quad \sum_{i=1}^N \alpha_i y_i = 0\\
+ & \alpha_i \ge 0, \quad i=1, 2, \dots, N
+\end{align}
+$$
 
-$$\text{s.t.} \quad \sum_{i=1}^N \alpha_i y_i = 0$$
 
-$$\alpha_i \ge 0, \quad i=1, 2, \dots, N$$
-
-求得最优解 $\alpha^* = (\alpha_1^*, \alpha_2^*, \dots, \alpha_N^*)^T$。
+求得最优解 $\alpha^\ast = (\alpha_1^\ast, \alpha_2^\ast, \dots, \alpha_N^\ast)^T$。
 
 **(2)** 计算
 
-$$w^* = \sum_{i=1}^N \alpha_i^* y_i x_i$$
+$$w^\ast = \sum_{i=1}^N \alpha_i^\ast y_i x_i$$
 
-并选择 $\alpha^*$ 的一个正分量 $\alpha_j^* > 0$，计算
+并选择 $\alpha^\ast$ 的一个正分量 $\alpha_j^\ast > 0$，计算
 
-$$b^* = y_j - \sum_{i=1}^N \alpha_i^* y_i (x_i \cdot x_j)$$
+$$b^\ast = y_j - \sum_{i=1}^N \alpha_i^\ast y_i (x_i \cdot x_j)$$
 
 **(3)** 求得分离超平面
 
-$$w^* \cdot x + b^* = 0$$
+$$w^\ast \cdot x + b^\ast = 0$$
 
 分类决策函数：
 
-$$f(x) = sign(w^* \cdot x + b^*)$$
+$$f(x) = sign(w^\ast \cdot x + b^\ast)$$
 
 
 
